// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/button/demo/basic.md correctly 1`] = `
Array [
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <span>
      Primary Button
    </span>
  </button>,
  <button
    class="ant-btn"
    type="button"
  >
    <span>
      Default Button
    </span>
  </button>,
  <button
    class="ant-btn ant-btn-dashed"
    type="button"
  >
    <span>
      Dashed Button
    </span>
  </button>,
  <br />,
  <button
    class="ant-btn ant-btn-text"
    type="button"
  >
    <span>
      Text Button
    </span>
  </button>,
  <button
    class="ant-btn ant-btn-link"
    type="button"
  >
    <span>
      Link Button
    </span>
  </button>,
]
`;

exports[`renders ./components/button/demo/block.md correctly 1`] = `
Array [
  <button
    class="ant-btn ant-btn-primary ant-btn-block"
    type="button"
  >
    <span>
      Primary
    </span>
  </button>,
  <button
    class="ant-btn ant-btn-block"
    type="button"
  >
    <span>
      Default
    </span>
  </button>,
  <button
    class="ant-btn ant-btn-dashed ant-btn-block"
    type="button"
  >
    <span>
      Dashed
    </span>
  </button>,
  <button
    class="ant-btn ant-btn-link ant-btn-block"
    type="button"
  >
    <span>
      Link
    </span>
  </button>,
]
`;

exports[`renders ./components/button/demo/danger.md correctly 1`] = `
Array [
  <button
    class="ant-btn ant-btn-primary ant-btn-dangerous"
    type="button"
  >
    <span>
      Primary
    </span>
  </button>,
  <button
    class="ant-btn ant-btn-dangerous"
    type="button"
  >
    <span>
      Default
    </span>
  </button>,
  <button
    class="ant-btn ant-btn-dashed ant-btn-dangerous"
    type="button"
  >
    <span>
      Dashed
    </span>
  </button>,
  <button
    class="ant-btn ant-btn-text ant-btn-dangerous"
    type="button"
  >
    <span>
      Text
    </span>
  </button>,
  <button
    class="ant-btn ant-btn-link ant-btn-dangerous"
    type="button"
  >
    <span>
      Link
    </span>
  </button>,
]
`;

exports[`renders ./components/button/demo/disabled.md correctly 1`] = `
Array [
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <span>
      Primary
    </span>
  </button>,
  <button
    class="ant-btn ant-btn-primary"
    disabled=""
    type="button"
  >
    <span>
      Primary(disabled)
    </span>
  </button>,
  <br />,
  <button
    class="ant-btn"
    type="button"
  >
    <span>
      Default
    </span>
  </button>,
  <button
    class="ant-btn"
    disabled=""
    type="button"
  >
    <span>
      Default(disabled)
    </span>
  </button>,
  <br />,
  <button
    class="ant-btn ant-btn-dashed"
    type="button"
  >
    <span>
      Dashed
    </span>
  </button>,
  <button
    class="ant-btn ant-btn-dashed"
    disabled=""
    type="button"
  >
    <span>
      Dashed(disabled)
    </span>
  </button>,
  <br />,
  <button
    class="ant-btn ant-btn-text"
    type="button"
  >
    <span>
      Text
    </span>
  </button>,
  <button
    class="ant-btn ant-btn-text"
    disabled=""
    type="button"
  >
    <span>
      Text(disabled)
    </span>
  </button>,
  <br />,
  <button
    class="ant-btn ant-btn-link"
    type="button"
  >
    <span>
      Link
    </span>
  </button>,
  <button
    class="ant-btn ant-btn-link"
    disabled=""
    type="button"
  >
    <span>
      Link(disabled)
    </span>
  </button>,
  <br />,
  <button
    class="ant-btn ant-btn-dangerous"
    type="button"
  >
    <span>
      Danger Default
    </span>
  </button>,
  <button
    class="ant-btn ant-btn-dangerous"
    disabled=""
    type="button"
  >
    <span>
      Danger Default(disabled)
    </span>
  </button>,
  <br />,
  <button
    class="ant-btn ant-btn-text ant-btn-dangerous"
    type="button"
  >
    <span>
      Danger Text
    </span>
  </button>,
  <button
    class="ant-btn ant-btn-text ant-btn-dangerous"
    disabled=""
    type="button"
  >
    <span>
      Danger Text(disabled)
    </span>
  </button>,
  <br />,
  <button
    class="ant-btn ant-btn-link ant-btn-dangerous"
    type="button"
  >
    <span>
      Danger Link
    </span>
  </button>,
  <button
    class="ant-btn ant-btn-link ant-btn-dangerous"
    disabled=""
    type="button"
  >
    <span>
      Danger Link(disabled)
    </span>
  </button>,
  <div
    class="site-button-ghost-wrapper"
  >
    <button
      class="ant-btn ant-btn-background-ghost"
      type="button"
    >
      <span>
        Ghost
      </span>
    </button>
    <button
      class="ant-btn ant-btn-background-ghost"
      disabled=""
      type="button"
    >
      <span>
        Ghost(disabled)
      </span>
    </button>
  </div>,
]
`;

exports[`renders ./components/button/demo/ghost.md correctly 1`] = `
<div
  class="site-button-ghost-wrapper"
>
  <button
    class="ant-btn ant-btn-primary ant-btn-background-ghost"
    type="button"
  >
    <span>
      Primary
    </span>
  </button>
  <button
    class="ant-btn ant-btn-background-ghost"
    type="button"
  >
    <span>
      Default
    </span>
  </button>
  <button
    class="ant-btn ant-btn-dashed ant-btn-background-ghost"
    type="button"
  >
    <span>
      Dashed
    </span>
  </button>
</div>
`;

exports[`renders ./components/button/demo/icon.md correctly 1`] = `
Array [
  <button
    class="ant-btn ant-btn-primary ant-btn-circle ant-btn-icon-only"
    type="button"
  >
    <span
      aria-label="search"
      class="anticon anticon-search"
      role="img"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="search"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
        />
      </svg>
    </span>
  </button>,
  <button
    class="ant-btn ant-btn-primary ant-btn-circle"
    type="button"
  >
    <span>
      A
    </span>
  </button>,
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <span
      aria-label="search"
      class="anticon anticon-search"
      role="img"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="search"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
        />
      </svg>
    </span>
    <span>
      Search
    </span>
  </button>,
  <button
    class="ant-btn ant-btn-circle ant-btn-icon-only"
    type="button"
  >
    <span
      aria-label="search"
      class="anticon anticon-search"
      role="img"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="search"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
        />
      </svg>
    </span>
  </button>,
  <button
    class="ant-btn"
    type="button"
  >
    <span
      aria-label="search"
      class="anticon anticon-search"
      role="img"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="search"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
        />
      </svg>
    </span>
    <span>
      Search
    </span>
  </button>,
  <br />,
  <button
    class="ant-btn ant-btn-circle ant-btn-icon-only"
    type="button"
  >
    <span
      aria-label="search"
      class="anticon anticon-search"
      role="img"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="search"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
        />
      </svg>
    </span>
  </button>,
  <button
    class="ant-btn"
    type="button"
  >
    <span
      aria-label="search"
      class="anticon anticon-search"
      role="img"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="search"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
        />
      </svg>
    </span>
    <span>
      Search
    </span>
  </button>,
  <button
    class="ant-btn ant-btn-dashed ant-btn-circle ant-btn-icon-only"
    type="button"
  >
    <span
      aria-label="search"
      class="anticon anticon-search"
      role="img"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="search"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
        />
      </svg>
    </span>
  </button>,
  <button
    class="ant-btn ant-btn-dashed"
    type="button"
  >
    <span
      aria-label="search"
      class="anticon anticon-search"
      role="img"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="search"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
        />
      </svg>
    </span>
    <span>
      Search
    </span>
  </button>,
]
`;

exports[`renders ./components/button/demo/legacy-group.md correctly 1`] = `
Array [
  <div>
    <div
      class="ant-btn-group ant-btn-group-sm"
    >
      <button
        class="ant-btn ant-btn-primary"
        type="button"
      >
        <span>
          Button 1
        </span>
      </button>
      <button
        class="ant-btn ant-btn-primary"
        type="button"
      >
        <span>
          Button 2
        </span>
      </button>
      <span
        class="ant-tooltip-disabled-compatible-wrapper"
        style="display:inline-block;cursor:not-allowed"
      >
        <button
          class="ant-btn ant-btn-primary ant-btn-icon-only"
          disabled=""
          style="pointer-events:none"
          type="button"
        >
          <span
            aria-label="download"
            class="anticon anticon-download"
            role="img"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="download"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M505.7 661a8 8 0 0012.6 0l112-141.7c4.1-5.2.4-12.9-6.3-12.9h-74.1V168c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v338.3H400c-6.7 0-10.4 7.7-6.3 12.9l112 141.8zM878 626h-60c-4.4 0-8 3.6-8 8v154H214V634c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v198c0 17.7 14.3 32 32 32h684c17.7 0 32-14.3 32-32V634c0-4.4-3.6-8-8-8z"
              />
            </svg>
          </span>
        </button>
      </span>
      <button
        class="ant-btn ant-btn-primary ant-btn-icon-only"
        type="button"
      >
        <span
          aria-label="download"
          class="anticon anticon-download"
          role="img"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="download"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M505.7 661a8 8 0 0012.6 0l112-141.7c4.1-5.2.4-12.9-6.3-12.9h-74.1V168c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v338.3H400c-6.7 0-10.4 7.7-6.3 12.9l112 141.8zM878 626h-60c-4.4 0-8 3.6-8 8v154H214V634c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v198c0 17.7 14.3 32 32 32h684c17.7 0 32-14.3 32-32V634c0-4.4-3.6-8-8-8z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>,
  <br />,
  <div>
    <div
      class="ant-btn-group"
    >
      <button
        class="ant-btn ant-btn-primary"
        type="button"
      >
        <span>
          Button 1
        </span>
      </button>
      <button
        class="ant-btn ant-btn-primary"
        type="button"
      >
        <span>
          Button 2
        </span>
      </button>
      <span
        class="ant-tooltip-disabled-compatible-wrapper"
        style="display:inline-block;cursor:not-allowed"
      >
        <button
          class="ant-btn ant-btn-primary ant-btn-icon-only"
          disabled=""
          style="pointer-events:none"
          type="button"
        >
          <span
            aria-label="download"
            class="anticon anticon-download"
            role="img"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="download"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M505.7 661a8 8 0 0012.6 0l112-141.7c4.1-5.2.4-12.9-6.3-12.9h-74.1V168c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v338.3H400c-6.7 0-10.4 7.7-6.3 12.9l112 141.8zM878 626h-60c-4.4 0-8 3.6-8 8v154H214V634c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v198c0 17.7 14.3 32 32 32h684c17.7 0 32-14.3 32-32V634c0-4.4-3.6-8-8-8z"
              />
            </svg>
          </span>
        </button>
      </span>
      <button
        class="ant-btn ant-btn-primary ant-btn-icon-only"
        type="button"
      >
        <span
          aria-label="download"
          class="anticon anticon-download"
          role="img"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="download"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M505.7 661a8 8 0 0012.6 0l112-141.7c4.1-5.2.4-12.9-6.3-12.9h-74.1V168c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v338.3H400c-6.7 0-10.4 7.7-6.3 12.9l112 141.8zM878 626h-60c-4.4 0-8 3.6-8 8v154H214V634c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v198c0 17.7 14.3 32 32 32h684c17.7 0 32-14.3 32-32V634c0-4.4-3.6-8-8-8z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>,
  <br />,
  <div>
    <div
      class="ant-btn-group ant-btn-group-lg"
    >
      <button
        class="ant-btn ant-btn-primary"
        type="button"
      >
        <span>
          Button 1
        </span>
      </button>
      <button
        class="ant-btn ant-btn-primary"
        type="button"
      >
        <span>
          Button 2
        </span>
      </button>
      <span
        class="ant-tooltip-disabled-compatible-wrapper"
        style="display:inline-block;cursor:not-allowed"
      >
        <button
          class="ant-btn ant-btn-primary ant-btn-icon-only"
          disabled=""
          style="pointer-events:none"
          type="button"
        >
          <span
            aria-label="download"
            class="anticon anticon-download"
            role="img"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="download"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M505.7 661a8 8 0 0012.6 0l112-141.7c4.1-5.2.4-12.9-6.3-12.9h-74.1V168c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v338.3H400c-6.7 0-10.4 7.7-6.3 12.9l112 141.8zM878 626h-60c-4.4 0-8 3.6-8 8v154H214V634c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v198c0 17.7 14.3 32 32 32h684c17.7 0 32-14.3 32-32V634c0-4.4-3.6-8-8-8z"
              />
            </svg>
          </span>
        </button>
      </span>
      <button
        class="ant-btn ant-btn-primary ant-btn-icon-only"
        type="button"
      >
        <span
          aria-label="download"
          class="anticon anticon-download"
          role="img"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="download"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M505.7 661a8 8 0 0012.6 0l112-141.7c4.1-5.2.4-12.9-6.3-12.9h-74.1V168c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v338.3H400c-6.7 0-10.4 7.7-6.3 12.9l112 141.8zM878 626h-60c-4.4 0-8 3.6-8 8v154H214V634c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v198c0 17.7 14.3 32 32 32h684c17.7 0 32-14.3 32-32V634c0-4.4-3.6-8-8-8z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>,
]
`;

exports[`renders ./components/button/demo/loading.md correctly 1`] = `
Array [
  <button
    class="ant-btn ant-btn-primary ant-btn-loading"
    type="button"
  >
    <span
      class="ant-btn-loading-icon"
    >
      <span
        aria-label="loading"
        class="anticon anticon-loading ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion"
        role="img"
      >
        <svg
          aria-hidden="true"
          class="anticon-spin"
          data-icon="loading"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
          />
        </svg>
      </span>
    </span>
    <span>
      Loading
    </span>
  </button>,
  <button
    class="ant-btn ant-btn-primary ant-btn-sm ant-btn-loading"
    type="button"
  >
    <span
      class="ant-btn-loading-icon"
    >
      <span
        aria-label="loading"
        class="anticon anticon-loading ant-btn-loading-icon-motion-appear ant-btn-loading-icon-motion"
        role="img"
      >
        <svg
          aria-hidden="true"
          class="anticon-spin"
          data-icon="loading"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
          />
        </svg>
      </span>
    </span>
    <span>
      Loading
    </span>
  </button>,
  <button
    class="ant-btn ant-btn-primary ant-btn-icon-only ant-btn-loading"
    type="button"
  >
    <span
      class="ant-btn-loading-icon"
    >
      <span
        aria-label="loading"
        class="anticon anticon-loading"
        role="img"
      >
        <svg
          aria-hidden="true"
          class="anticon-spin"
          data-icon="loading"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
          />
        </svg>
      </span>
    </span>
  </button>,
  <br />,
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <span>
      Click me!
    </span>
  </button>,
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <span
      aria-label="poweroff"
      class="anticon anticon-poweroff"
      role="img"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="poweroff"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M705.6 124.9a8 8 0 00-11.6 7.2v64.2c0 5.5 2.9 10.6 7.5 13.6a352.2 352.2 0 0162.2 49.8c32.7 32.8 58.4 70.9 76.3 113.3a355 355 0 0127.9 138.7c0 48.1-9.4 94.8-27.9 138.7a355.92 355.92 0 01-76.3 113.3 353.06 353.06 0 01-113.2 76.4c-43.8 18.6-90.5 28-138.5 28s-94.7-9.4-138.5-28a353.06 353.06 0 01-113.2-76.4A355.92 355.92 0 01184 650.4a355 355 0 01-27.9-138.7c0-48.1 9.4-94.8 27.9-138.7 17.9-42.4 43.6-80.5 76.3-113.3 19-19 39.8-35.6 62.2-49.8 4.7-2.9 7.5-8.1 7.5-13.6V132c0-6-6.3-9.8-11.6-7.2C178.5 195.2 82 339.3 80 506.3 77.2 745.1 272.5 943.5 511.2 944c239 .5 432.8-193.3 432.8-432.4 0-169.2-97-315.7-238.4-386.7zM480 560h64c4.4 0 8-3.6 8-8V88c0-4.4-3.6-8-8-8h-64c-4.4 0-8 3.6-8 8v464c0 4.4 3.6 8 8 8z"
        />
      </svg>
    </span>
    <span>
      Click me!
    </span>
  </button>,
  <button
    class="ant-btn ant-btn-primary ant-btn-icon-only"
    type="button"
  >
    <span
      aria-label="poweroff"
      class="anticon anticon-poweroff"
      role="img"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="poweroff"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M705.6 124.9a8 8 0 00-11.6 7.2v64.2c0 5.5 2.9 10.6 7.5 13.6a352.2 352.2 0 0162.2 49.8c32.7 32.8 58.4 70.9 76.3 113.3a355 355 0 0127.9 138.7c0 48.1-9.4 94.8-27.9 138.7a355.92 355.92 0 01-76.3 113.3 353.06 353.06 0 01-113.2 76.4c-43.8 18.6-90.5 28-138.5 28s-94.7-9.4-138.5-28a353.06 353.06 0 01-113.2-76.4A355.92 355.92 0 01184 650.4a355 355 0 01-27.9-138.7c0-48.1 9.4-94.8 27.9-138.7 17.9-42.4 43.6-80.5 76.3-113.3 19-19 39.8-35.6 62.2-49.8 4.7-2.9 7.5-8.1 7.5-13.6V132c0-6-6.3-9.8-11.6-7.2C178.5 195.2 82 339.3 80 506.3 77.2 745.1 272.5 943.5 511.2 944c239 .5 432.8-193.3 432.8-432.4 0-169.2-97-315.7-238.4-386.7zM480 560h64c4.4 0 8-3.6 8-8V88c0-4.4-3.6-8-8-8h-64c-4.4 0-8 3.6-8 8v464c0 4.4 3.6 8 8 8z"
        />
      </svg>
    </span>
  </button>,
]
`;

exports[`renders ./components/button/demo/multiple.md correctly 1`] = `
Array [
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <span>
      primary
    </span>
  </button>,
  <button
    class="ant-btn"
    type="button"
  >
    <span>
      secondary
    </span>
  </button>,
  <button
    class="ant-btn ant-dropdown-trigger"
    type="button"
  >
    <span>
      Actions 
    </span>
    <span
      aria-label="down"
      class="anticon anticon-down"
      role="img"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="down"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
        />
      </svg>
    </span>
  </button>,
]
`;

exports[`renders ./components/button/demo/size.md correctly 1`] = `
Array [
  <div
    class="ant-radio-group ant-radio-group-outline"
  >
    <label
      class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"
    >
      <span
        class="ant-radio-button ant-radio-button-checked"
      >
        <input
          checked=""
          class="ant-radio-button-input"
          type="radio"
          value="large"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Large
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          type="radio"
          value="default"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Default
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          type="radio"
          value="small"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span>
        Small
      </span>
    </label>
  </div>,
  <br />,
  <br />,
  <button
    class="ant-btn ant-btn-primary ant-btn-lg"
    type="button"
  >
    <span>
      Primary
    </span>
  </button>,
  <button
    class="ant-btn ant-btn-lg"
    type="button"
  >
    <span>
      Default
    </span>
  </button>,
  <button
    class="ant-btn ant-btn-dashed ant-btn-lg"
    type="button"
  >
    <span>
      Dashed
    </span>
  </button>,
  <br />,
  <button
    class="ant-btn ant-btn-link ant-btn-lg"
    type="button"
  >
    <span>
      Link
    </span>
  </button>,
  <br />,
  <button
    class="ant-btn ant-btn-primary ant-btn-lg ant-btn-icon-only"
    type="button"
  >
    <span
      aria-label="download"
      class="anticon anticon-download"
      role="img"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="download"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M505.7 661a8 8 0 0012.6 0l112-141.7c4.1-5.2.4-12.9-6.3-12.9h-74.1V168c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v338.3H400c-6.7 0-10.4 7.7-6.3 12.9l112 141.8zM878 626h-60c-4.4 0-8 3.6-8 8v154H214V634c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v198c0 17.7 14.3 32 32 32h684c17.7 0 32-14.3 32-32V634c0-4.4-3.6-8-8-8z"
        />
      </svg>
    </span>
  </button>,
  <button
    class="ant-btn ant-btn-primary ant-btn-circle ant-btn-lg ant-btn-icon-only"
    type="button"
  >
    <span
      aria-label="download"
      class="anticon anticon-download"
      role="img"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="download"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M505.7 661a8 8 0 0012.6 0l112-141.7c4.1-5.2.4-12.9-6.3-12.9h-74.1V168c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v338.3H400c-6.7 0-10.4 7.7-6.3 12.9l112 141.8zM878 626h-60c-4.4 0-8 3.6-8 8v154H214V634c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v198c0 17.7 14.3 32 32 32h684c17.7 0 32-14.3 32-32V634c0-4.4-3.6-8-8-8z"
        />
      </svg>
    </span>
  </button>,
  <button
    class="ant-btn ant-btn-primary ant-btn-round ant-btn-lg ant-btn-icon-only"
    type="button"
  >
    <span
      aria-label="download"
      class="anticon anticon-download"
      role="img"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="download"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M505.7 661a8 8 0 0012.6 0l112-141.7c4.1-5.2.4-12.9-6.3-12.9h-74.1V168c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v338.3H400c-6.7 0-10.4 7.7-6.3 12.9l112 141.8zM878 626h-60c-4.4 0-8 3.6-8 8v154H214V634c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v198c0 17.7 14.3 32 32 32h684c17.7 0 32-14.3 32-32V634c0-4.4-3.6-8-8-8z"
        />
      </svg>
    </span>
  </button>,
  <button
    class="ant-btn ant-btn-primary ant-btn-round ant-btn-lg"
    type="button"
  >
    <span
      aria-label="download"
      class="anticon anticon-download"
      role="img"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="download"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M505.7 661a8 8 0 0012.6 0l112-141.7c4.1-5.2.4-12.9-6.3-12.9h-74.1V168c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v338.3H400c-6.7 0-10.4 7.7-6.3 12.9l112 141.8zM878 626h-60c-4.4 0-8 3.6-8 8v154H214V634c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v198c0 17.7 14.3 32 32 32h684c17.7 0 32-14.3 32-32V634c0-4.4-3.6-8-8-8z"
        />
      </svg>
    </span>
    <span>
      Download
    </span>
  </button>,
  <button
    class="ant-btn ant-btn-primary ant-btn-lg"
    type="button"
  >
    <span
      aria-label="download"
      class="anticon anticon-download"
      role="img"
    >
      <svg
        aria-hidden="true"
        class=""
        data-icon="download"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M505.7 661a8 8 0 0012.6 0l112-141.7c4.1-5.2.4-12.9-6.3-12.9h-74.1V168c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v338.3H400c-6.7 0-10.4 7.7-6.3 12.9l112 141.8zM878 626h-60c-4.4 0-8 3.6-8 8v154H214V634c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v198c0 17.7 14.3 32 32 32h684c17.7 0 32-14.3 32-32V634c0-4.4-3.6-8-8-8z"
        />
      </svg>
    </span>
    <span>
      Download
    </span>
  </button>,
]
`;
